fix: handle click offscreen error & add new game

--- a/index.css
+++ b/index.css
@@ -1,5 +1,12 @@
 body {
     background-color: black;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    min-height: 100vh;
+    margin: 0;
 }
 
 .container > div > div{
@@ -14,13 +21,15 @@ body {
 .container {
     display: flex;
     width: 100%;
-    height: 98dvh;
     justify-content: center;
     align-items: center;
 }
 
-/* .row0,
-.row1,
-.row2 {
-
-} */
+.newGame {
+    color:white;
+    background-color: black;
+    text-align: center;
+    font-size: 30px;
+    flex: 0 1 auto;
+    width: 300px;
+}
